--- a/styles/index.module.scss
+++ b/styles/index.module.scss
@@ -1,60 +1,87 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500&display=swap');
 
-
 .container {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    padding: 2rem 0;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  padding: 2rem 0;
 
-    &.afterWave {
-        background-color: #ffff;
-        color: #09f;
-        padding-bottom: 4rem;
-    }
+  &.afterWave {
+    background-color: #fff;
+    color: #09f;
+    padding-bottom: 4rem;
+  }
 }
 
 .title {
-    font-size: 4rem;
-    margin: 7rem 1.25rem 2.5rem 1.25rem;
+  font-size: 4rem;
+  margin: 7rem 1.25rem 2.5rem 1.25rem;
 }
 
 .subTitle {
-    font-size: 3rem;
-    margin: 7rem 1.25rem 2.5rem 1.25rem;
+  font-size: 3rem;
+  margin: 7rem 1.25rem 2.5rem 1.25rem;
 }
 
 @keyframes animateWave {
-0% {
+  0% {
     transform: scale(1,0);
-}
-100% {
+  }
+  100% {
     transform: scale(1,1);
-}
+  }
 }
 
 .waveContainer {
-    backgorund: #09f;
-    color: #fff;
-    position: relative;
-    text-align: center;
-    overflow: hidden;
+  background: #09f;
+  color: #FFF;
+  position: relative;
+  text-align: center;
+  overflow: hidden;
 
->svg {
+  > svg {
     display: block;
     transform-origin: bottom;
-    animation: animateWave 1000ms cubic-bezier(0.23, 1,0.32,1) forwards;
-}
+    animation: animateWave 1000ms cubic-bezier(0.23, 1, 0.32, 1) forwards;
+  }
 }
 
 .latestButton {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    .icon {
-        margin-left: 10rem;
-        width: 10px;
-    }
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  .icon {
+    margin-left: 10rem;
+    width: 10px;
+  }
 }
 
+.modal {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background: #09f;
+  color: #fff;
+  overflow: auto;
+  border-radius: 5px;
+  outline: none;
+  padding: 2rem;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  
+  .closeBtn {
+    margin-bottom: 2rem;
+  }
+
+  .modalContainer {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    
+    .modalForm {
+      display: flex;
+      flex-direction: column;
+    }
+  }
+}
