--- a/styles/button.module.scss
+++ b/styles/button.module.scss
@@ -1,4 +1,8 @@
 .btn {
     font-family: 'Space Grotesk', sans-serif;
     border: none;
+    padding: 1rem 2rem;
+    margin: 1rem 0;
+    font-size: 1rem;;
+    border-radius: 5px;
 }
