--- a/styles/button.module.scss
+++ b/styles/button.module.scss
@@ -3,6 +3,46 @@
     border: none;
     padding: 1rem 2rem;
     margin: 1rem 0;
-    font-size: 1rem;;
+    font-size: 1rem;
     border-radius: 5px;
-}
+    outline: 0;
+    cursor: pointer;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    
+    &:disabled {
+      cursor: not-allowed;
+      background-color: #eee !important;
+      box-shadow: none;
+    }
+  
+    &:hover {
+      box-shadow: 0px 15px 20px rgba(255, 255, 255, 0.4);
+      transform: translateY(-3px);
+    }
+    
+    &.small {
+      padding: 0.5rem 1.5rem;
+      &:hover {
+        transform: none;
+      }
+    }
+    &.primary {
+      background-color: #fff;
+    }
+    &.secondary {
+      background-color: #09f;
+      color: #fff;
+    }
+    &.link {
+      background-color: #ddd;
+      color: #222;
+      box-shadow: none;
+    }
+    &.danger {
+      background-color: #cf000f;
+      color: #fff;
+    }
+  }
+  
+  
