--- a/styles/button.module.scss
+++ b/styles/button.module.scss
@@ -10,11 +10,11 @@
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease 0s;
     
-    &:disabled {
-      cursor: not-allowed;
-      background-color: #eee !important;
-      box-shadow: none;
-    }
+    // &:disabled {
+    //   cursor: not-allowed;
+    //   background-color: #eee !important;
+    //   box-shadow: none;
+    // }
   
     &:hover {
       box-shadow: 0px 15px 20px rgba(255, 255, 255, 0.4);
