--- a/styles/postCard.module.scss
+++ b/styles/postCard.module.scss
@@ -1,6 +1,6 @@
 .container {
 display: flex;
-flex-direction: column;
+flex-direction: row;
 border: solid black 2px;
 padding: 30px;
 justify-content: center;
@@ -19,6 +19,8 @@ align-items: center;
     display: flex;
     justify-content: space-between;
     padding: 50px;
+    float: right;
+    
 }
 
 .button{
