Updated postcard styling

--- a/styles/button.module.scss
+++ b/styles/button.module.scss
@@ -28,7 +28,7 @@
       }
     }
     &.primary {
-      background-color: #fff;
+      background-color: red;
     }
     &.secondary {
       background-color: #09f;
